<resources>
    <string name="app_name">Halloween</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_hint">Introduce o teu nome aquí:</string>
    <string name="write_name">Escribe o teu nome:</string>
    <string name="next_button">Seguinte</string>
    <string name="casa_encantada">Casa encantada</string>
    <string name="bosque_encantado">Bosque encantado</string>
    <string name="aquelarre">Aquelarre de bruxas</string>
</resources>