<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".themeFragment">

    <TextView
        android:id="@+id/text_theme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:text="Selecciona unha temática"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="24dp"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/card_casa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_casa"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:src="@drawable/haunted_house"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.55"
                />

            <TextView
                android:id="@+id/text_casa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/casa_encantada"
                android:gravity="center"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_casa"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_bosque"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:src="@drawable/haunted_forest"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.55"
                />

            <TextView
                android:id="@+id/text_bosque"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bosque_encantado"
                android:gravity="center"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_bosque"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/aquelarre"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:src="@drawable/witch_coven"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.55"
                />

            <TextView
                android:id="@+id/texto_aquelarre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/aquelarre"
                android:gravity="center"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/aquelarre"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>